--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 body{
     font-family: 'Merriweather', serif;
-    background-color: #f9fafc;
+    background-color: #e7ecf3;
 }
 
 .navbar{
@@ -23,7 +23,8 @@ body{
     width: 100%;
 }
 
-.nav__item{
+
+.button__primary{
     background-image: linear-gradient(to right,#ff512f 0%,#dd2476 51%,#ff512f 100%);
     color: #fff;
     border: none;
@@ -32,24 +33,140 @@ body{
     font-weight: 600;
 }
 
-.nav__item:hover{
+.button__primary:hover{
     /* background-position: right center; */
-    border: 2px solid #F94A29;
+    border: 2px solid #Ff6767;
+    cursor: pointer;
+}
+
+.container{
+    max-width: 100%;
+    padding: 20px ;
+    margin: 0 auto;
+
+}
+
+.hero__image__container{
+    width: 100%;
+}
+
+.hero__image{
+    width: 100%;
+    border-radius: 8px;
+    box-shadow: 0 25px 50px -12px rgb(0 0 0 /25%);
+}
+
+.hero__text{
+    margin-left: 6%;
+    font-weight: 800;
+    font-size: 30px;
+    margin: 20px 0;
+    color: #09111d;
+}
+
+.food__card__description{
+    padding: 15px;
+}
+
+.food__card{
+    box-shadow: 0 25px 50px -12px rgb(0 0 0 /25%);
+    margin-bottom: 25px;
+    background-color: #f9f9f9;
+    border-radius: 5px;
+}
+
+.food__card__image__container{
+    width: 100%;
+}
+
+.food__image{
+    border-radius: 5px 5px 0 0;
+    width: 100%;
+}
+
+.explore__menu__text{
+    margin-top: 30px;
+    margin-bottom: 30px;
+    text-align: center;
+    font-size: 30px;
+    font-weight: 800;
+    color: #09111d;
 }
 
 @media (min-width: 768px) {
+    .explore__menu__lists{
+        margin-top: 50px;
+        display: flex;
+        gap: 2%;
+    }
+
+    .explore__menu__container{
+        position: relative;
+    }
+
+    .explore__menu__gradient__bg{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 110%;
+        background-image: linear-gradient(to right,#ff512f 0%,#dd2476 51%,#ff512f 100%);
+        z-index: -3;
+        transform: skewY(-5deg);
+    }
+
+    .food__card{
+        margin-bottom: 40;
+    }
+    
+    #burger__card{
+        margin-left: 40px;
+    }
+
+    #iceCream__card{
+        margin-right: 40px;
+    }
+
+    #pizza__card{
+        margin-top: -20px;
+        margin-bottom: 50px;
+    }
     .navbar{
         justify-content: space-between;
-        padding: 10px, 30px;
+        padding: 10px 30px;
+    }
+
+    .hero__container{
+        margin-bottom: 150px;
+        margin-top: 25px;
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
     }
 }
 
 @media (min-width: 1024px) {
+    .container{
+        max-width: 70%;
+    }
+
     .navbar__brand{
         width: 150px;
     }
-    .nav__item{
+    .button__primary{
         padding: 20px;
         font-size: 20px;
+    }
+    .hero__description{
+        width: 100%;
+    }
+
+    .hero__text{
+        margin-right:6%;
+        font-size: 48px;
+    }
+
+    .explore__menu__text{
+        font-size: 48px;
     }
 }
